tests/snapshots/wire_snapshots__an_item_with_a_cover.snap
---
source: tests/wire_snapshots.rs
expression: readable(&didl)
---
<DIDL-Lite xmlns="urn:schemas-upnp-org:metadata-1-0/DIDL-Lite/" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:upnp="urn:schemas-upnp-org:metadata-1-0/upnp/" xmlns:dlna="urn:schemas-dlna-org:metadata-1-0/">
<item id="t0000000000000001" parentID="0" restricted="1">
<dc:title>Juana Peña</dc:title>
<upnp:genre>Latin</upnp:genre>
<dc:date>1994-01-01</dc:date>
<upnp:album>!Dundunbanza!</upnp:album>
<upnp:artist>Sierra Maestra</upnp:artist>
<dc:creator>Sierra Maestra</dc:creator>
<upnp:artist role="AlbumArtist">Sierra Maestra</upnp:artist>
<upnp:originalTrackNumber>1</upnp:originalTrackNumber>
<upnp:albumArtURI dlna:profileID="JPEG_MED">http://192.0.2.1:8200/art/t0000000000000001</upnp:albumArtURI>
<res duration="0:04:03.026" size="27296681" bitsPerSample="16" bitrate="176400" sampleFrequency="44100" nrAudioChannels="2" protocolInfo="http-get:*:audio/x-flac:DLNA.ORG_OP=01;DLNA.ORG_FLAGS=01700000000000000000000000000000">http://192.0.2.1:8200/media/t0000000000000001</res>
<upnp:class>object.item.audioItem.musicTrack</upnp:class>
</item>
</DIDL-Lite>
