tests/snapshots/wire_snapshots__browse_the_music_container.snap
---
source: tests/wire_snapshots.rs
expression: "readable(&browse(&library(), contentdirectory::MUSIC,\ncontentdirectory::BrowseFlag::DirectChildren, 10))"
---
<?xml version="1.0" encoding="utf-8"?>
<s:Envelope xmlns:s="http://schemas.xmlsoap.org/soap/envelope/" s:encodingStyle="http://schemas.xmlsoap.org/soap/encoding/">
<s:Body>
<u:BrowseResponse xmlns:u="urn:schemas-upnp-org:service:ContentDirectory:1">
<Result>&lt;DIDL-Lite xmlns=&quot;urn:schemas-upnp-org:metadata-1-0/DIDL-Lite/&quot; xmlns:dc=&quot;http://purl.org/dc/elements/1.1/&quot; xmlns:upnp=&quot;urn:schemas-upnp-org:metadata-1-0/upnp/&quot; xmlns:dlna=&quot;urn:schemas-dlna-org:metadata-1-0/&quot;&gt;&lt;item id=&quot;t0000000000000001&quot; parentID=&quot;music&quot; restricted=&quot;1&quot;&gt;&lt;dc:title&gt;Juana Peña&lt;/dc:title&gt;&lt;upnp:genre&gt;Latin&lt;/upnp:genre&gt;&lt;dc:date&gt;1994-01-01&lt;/dc:date&gt;&lt;upnp:album&gt;!Dundunbanza!&lt;/upnp:album&gt;&lt;upnp:artist&gt;Sierra Maestra&lt;/upnp:artist&gt;&lt;dc:creator&gt;Sierra Maestra&lt;/dc:creator&gt;&lt;upnp:artist role=&quot;AlbumArtist&quot;&gt;Sierra Maestra&lt;/upnp:artist&gt;&lt;upnp:originalTrackNumber&gt;1&lt;/upnp:originalTrackNumber&gt;&lt;res duration=&quot;0:04:03.026&quot; size=&quot;27296681&quot; bitsPerSample=&quot;16&quot; bitrate=&quot;176400&quot; sampleFrequency=&quot;44100&quot; nrAudioChannels=&quot;2&quot; protocolInfo=&quot;http-get:*:audio/x-flac:DLNA.ORG_OP=01;DLNA.ORG_FLAGS=01700000000000000000000000000000&quot;&gt;http://192.0.2.1:8200/media/t0000000000000001&lt;/res&gt;&lt;upnp:class&gt;object.item.audioItem.musicTrack&lt;/upnp:class&gt;&lt;/item&gt;&lt;item id=&quot;t0000000000000002&quot; parentID=&quot;music&quot; restricted=&quot;1&quot;&gt;&lt;dc:title&gt;Dundunbanza&lt;/dc:title&gt;&lt;upnp:genre&gt;Latin&lt;/upnp:genre&gt;&lt;dc:date&gt;1994-01-01&lt;/dc:date&gt;&lt;upnp:album&gt;!Dundunbanza!&lt;/upnp:album&gt;&lt;upnp:artist&gt;Sierra Maestra&lt;/upnp:artist&gt;&lt;dc:creator&gt;Sierra Maestra&lt;/dc:creator&gt;&lt;upnp:artist role=&quot;AlbumArtist&quot;&gt;Sierra Maestra&lt;/upnp:artist&gt;&lt;upnp:originalTrackNumber&gt;2&lt;/upnp:originalTrackNumber&gt;&lt;res duration=&quot;0:05:09.573&quot; size=&quot;33619600&quot; bitsPerSample=&quot;16&quot; bitrate=&quot;176400&quot; sampleFrequency=&quot;44100&quot; nrAudioChannels=&quot;2&quot; protocolInfo=&quot;http-get:*:audio/x-flac:DLNA.ORG_OP=01;DLNA.ORG_FLAGS=01700000000000000000000000000000&quot;&gt;http://192.0.2.1:8200/media/t0000000000000002&lt;/res&gt;&lt;upnp:class&gt;object.item.audioItem.musicTrack&lt;/upnp:class&gt;&lt;/item&gt;&lt;item id=&quot;t0000000000000003&quot; parentID=&quot;music&quot; restricted=&quot;1&quot;&gt;&lt;dc:title&gt;No Me Llores Más&lt;/dc:title&gt;&lt;upnp:genre&gt;Latin&lt;/upnp:genre&gt;&lt;dc:date&gt;1994-01-01&lt;/dc:date&gt;&lt;upnp:album&gt;!Dundunbanza!&lt;/upnp:album&gt;&lt;upnp:artist&gt;Sierra Maestra&lt;/upnp:artist&gt;&lt;dc:creator&gt;Sierra Maestra&lt;/dc:creator&gt;&lt;upnp:artist role=&quot;AlbumArtist&quot;&gt;Sierra Maestra&lt;/upnp:artist&gt;&lt;upnp:originalTrackNumber&gt;3&lt;/upnp:originalTrackNumber&gt;&lt;res duration=&quot;0:05:16.120&quot; size=&quot;34336845&quot; bitsPerSample=&quot;16&quot; bitrate=&quot;176400&quot; sampleFrequency=&quot;44100&quot; nrAudioChannels=&quot;2&quot; protocolInfo=&quot;http-get:*:audio/x-flac:DLNA.ORG_OP=01;DLNA.ORG_FLAGS=01700000000000000000000000000000&quot;&gt;http://192.0.2.1:8200/media/t0000000000000003&lt;/res&gt;&lt;upnp:class&gt;object.item.audioItem.musicTrack&lt;/upnp:class&gt;&lt;/item&gt;&lt;/DIDL-Lite&gt;</Result>
<NumberReturned>3</NumberReturned>
<TotalMatches>3</TotalMatches>
<UpdateID>1</UpdateID>
</u:BrowseResponse>
</s:Body>
</s:Envelope>
